deploy/frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vista-frontend
  labels:
    app: vista-frontend
spec:
  selector:
    app: vista-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
